--- a/doc/tuned.conf.5
+++ b/doc/tuned.conf.5
@@ -35,7 +35,7 @@ Enabled or disable the plugin. Default is True. Any other value disables it.
 /etc/tuned.conf
 .SH "SEE ALSO"
 .LP
-tuned(8)
+tuned(8) tuned-adm(1)
 .SH AUTHOR
 Written by Phil Knirsch <pknirsch@redhat.com>.
 .SH REPORTING BUGS
