--- a/doc/tuned.8
+++ b/doc/tuned.8
@@ -11,6 +11,11 @@ periodically. This information is then used by tuning plugins to change system
 settings to lower or higher power saving modes in order to adapt to the current
 usage. Currently monitoring and tuning plugins for CPU, ethernet network and ATA
 harddisk devices are implemented.
+
+In order to make it easier to switch between settings for different setups or
+locations we now have an additional tool to switch between profiles.
+Several pre defined profiles have already been included, but new ones can easily
+be added or existing ones modified. For more details look at tuned-adm(1).
 .SH OPTIONS
 .TP 12
 .BI \-d "\fR, \fP" \--daemon
